--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
   
   <!-- Botão do Chat 1 -->
 <button class="chat-toggle" onclick="abrirToggleComRecompensa('chat-jesus-container')">
-  🕊️ Fale para Jesus <div class="toggle-ads">🎥</div>
+  🕊️ Fale para Jesus
 </button>
 
 
