--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
 <main class="container">
   
   <!-- Botão do Chat 1 -->
-<button class="chat-toggle" onclick="abrirToggleComRecompensa('chat-jesus-container')">
+<button id="toggle-jesus" class="chat-toggle" onclick="abrirToggleComRecompensa('chat-jesus-container')">
   🕊️ Fale para Jesus
 </button>
 
@@ -141,7 +141,7 @@
   </div>
 
   <!--== 🔹Chat 2: Palavra de Sabedoria ==-->
-  <button class="chat-toggle" onclick="abrirToggleComRecompensa('biblia-chat-container')">
+  <button id="toggle-biblia" class="chat-toggle" onclick="abrirToggleComRecompensa('biblia-chat-container')">
   📖 Palavra de Sabedoria
   </button>
 
@@ -171,7 +171,7 @@
   </div>
 
   <!--=== 🔹Salmo do Dia ===--->
-<button class="chat-toggle" onclick="abrirToggleComRecompensa('salmo-container')">
+<button id="salmo-toggle" class="chat-toggle" onclick="abrirToggleComRecompensa('salmo-container')">
   📜 Salmo do Dia
 </button>
 
