--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,8 @@
 <main class="container">
   
   <!-- Botão do Chat 1 -->
-<button id="toggle-jesus" class="chat-toggle" onclick="abrirToggleComRecompensa('chat-jesus-container')">
+<button id="toggle-jesus" class="chat-toggle"
+  onclick="abrirToggleComRecompensa('toggle-jesus', 'jesus')">
   🕊️ Fale para Jesus
 </button>
 
@@ -141,7 +142,8 @@
   </div>
 
   <!--== 🔹Chat 2: Palavra de Sabedoria ==-->
-  <button id="toggle-biblia" class="chat-toggle" onclick="abrirToggleComRecompensa('biblia-chat-container')">
+  <button id="toggle-biblia" class="chat-toggle"
+  onclick="abrirToggleComRecompensa('toggle-biblia', 'biblia')">
   📖 Palavra de Sabedoria
   </button>
 
@@ -171,7 +173,8 @@
   </div>
 
   <!--=== 🔹Salmo do Dia ===--->
-<button id="salmo-toggle" class="chat-toggle" onclick="abrirToggleComRecompensa('salmo-container')">
+<button id="salmo-toggle" class="chat-toggle"
+  onclick="abrirToggleComRecompensa('salmo-toggle', 'salmo')">
   📜 Salmo do Dia
 </button>
 
